Applied pattern strategy to tab completion